updated lab members

--- a/lab_people.html
+++ b/lab_people.html
@@ -76,13 +76,17 @@
   <br style="clear:both" />
 	  <p></p>
 
-	   <h3>Victoria Klimaj, Graduate Student</h3>
+	<h3>Tyler Nighswander, PhD (2025)
+  
+<p></p>
+	  <br style="clear:both" />
+			
+	<h3>Victoria Klimaj, Graduate Student</h3>
 	  <p></p>
 	  <br style="clear:both" />
 	  
-  <h3>Tyler Nighswander, Graduate Student</h3>
-  
-<p></p>
+ <h3>Snigdha Khanna, Graduate Student</h3>
+	  <p></p>
 	  <br style="clear:both" />
 	  
 	  <h3>Leo Visser, Undergraduate Student</h3>
